Fixing The Ui On Mobile

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,3 +18,6 @@
 .download-button {
   @apply text-gray-500   w-[40px] h-[40px] text-2xl hover:text-indigo-600 cursor-pointer duration-200 absolute top-[65px] right-[20px];
 }
+main {
+  @apply max-h-barHeight overflow-auto;
+}
